--- a/README
+++ b/README
@@ -4,7 +4,5 @@ SubmitScripts
 Tool for submitting SUSY Aachen analysis jobs.
 
 Administrators:
- * Matthias Edelhoff
- * Niklas Mohr
- * Daniel Sprenger
+ * Marius Teroerde
 
